--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
     <script src="unemployment_rate.js"></script>
+    <script src="group_comparison.js"></script>
 </head>
 <body>
     <div class="unemployment_rate_map">
         <div id="map_chart"></div>
+    </div>
+    <div class="group_comparison">
+        <div id="bar_chart"></div>
     </div>
 </body>
 </html>
