Add other countries to show the Malaysia location

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <h1>Labor Market Trends in Malaysia: Employment, Unemployment, and Labor Force Categories</h1>
     <div class="unemployment_rate_map">
+        <h2>Average Unemployment Rate in Malaysia by State (2023)</h2>
         <div id="map_chart"></div>
-        <div class="annotation" style="top: 120px; right: 630px;">
-            <p style="color: black;"> In 2023, there were <span style="font-weight: bold">169,800</span> jobless people in Sabah.</p>
-            <!-- https://www.thestar.com.my/news/nation/2023/08/22/highest-unemployment-rate-recorded-in-sabah -->
-          </div>
+        <div class="annotation" style="top: 50px; left: 400px;">
+            <p style="color: black;">In 2023, there were <span style="font-weight: bold">169,800</span> jobless people in Sabah.</p>
+        </div>
     </div>
     <div class="group_comparison">
         <div id="bar_chart"></div>
