Add streamgraph and isotype

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <script src="unemployment_rate.js"></script>
     <script src="group_comparison.js"></script>
     <script src="parallel_coordinate.js"></script>
+    <script src="stream_graph.js"></script>
+    <script src="age_group.js"></script>
 </head>
 <body>
-    <h1>Labor Market Trends in Malaysia: Employment, Unemployment, and Labor Force Categories</h1>
+    <h1>Labor Market Trends and Gross Domestic Product (GDP) in Malaysia</h1>
     <div class="unemployment_rate_map">
         <h2>Average Unemployment Rate in Malaysia by State (2023)</h2>
         <div id="map_chart"></div>
@@ -40,6 +42,17 @@
                 <br>
                 <br> Overall, Putrajaya stands out due to its small population but relatively high GDP growth, participation rate, and extremely low unemployment rate. This could indicate a unique economic structure.
                 High population regions like Selangor and Johor exhibit strong economic performance with high GDP growth and lower unemployment rates, signaling economic robustness.
+            </p>
+        </div>
+    </div>
+    <div class="stream-and-isotype-container">
+        <div id="stream_graph"></div>
+        <div id="isotype-container">        
+            <div id="isotype_age"></div>
+            <p id="text2">6,000 thousands people per icon
+                <br>
+                <br>
+                The visualizations illustrate Malaysia's economic landscape and labor market in 2023. The GDP Annual Growth by Economic Sector graph shows that the Services and Manufacturing sectors significantly contribute to growth, with Services leading in annual percentages. In contrast, the Underemployment in Malaysia by Age Group chart highlights higher underemployment rates among those aged 15-24, indicating job matching challenges for youth. Together, these graphs underscore the need to address underemployment to enhance economic productivity and reflect the ongoing shift toward a service-oriented economy in Malaysia.
             </p>
         </div>
     </div>
